--- a/1.5/Source/VanillaRacesExpanded-Insector/VanillaRacesExpanded-Insector/VanillaRacesExpanded-Insector.csproj
+++ b/1.5/Source/VanillaRacesExpanded-Insector/VanillaRacesExpanded-Insector/VanillaRacesExpanded-Insector.csproj
@@ -304,6 +304,7 @@
     <Compile Include="Genelines\Window_EditGeneline.cs" />
     <Compile Include="Genelines\Window_ManageGenelines.cs" />
     <Compile Include="Harmony\AttackTargetFinder_ShouldIgnoreNoncombatant.cs" />
+    <Compile Include="Harmony\Blueprint_TryReplaceWithSolidThing.cs" />
     <Compile Include="Harmony\FoodUtility_ThoughtsFromIngesting.cs" />
     <Compile Include="Harmony\GeneUIUtility_DrawSection_Patch.cs" />
     <Compile Include="Harmony\GeneUtility_GenesInOrder_Patch.cs" />
