--- a/1.5/Source/VanillaRacesExpanded-Insector/VanillaRacesExpanded-Insector/VanillaRacesExpanded-Insector.csproj
+++ b/1.5/Source/VanillaRacesExpanded-Insector/VanillaRacesExpanded-Insector/VanillaRacesExpanded-Insector.csproj
@@ -293,6 +293,7 @@
   <ItemGroup>
     <Compile Include="AI\JobDrivers\JobDriver_ChestburstImplantation.cs" />
     <Compile Include="Alerts\Alert_ChestburstImplantationNeeded.cs" />
+    <Compile Include="Filths\Filth_ToxEmitting.cs" />
     <Compile Include="Genelines\GenelineGeneDef.cs" />
     <Compile Include="DefOfs\InternalDefOf.cs" />
     <Compile Include="Genelines\GameComponent_Genelines.cs" />
@@ -325,6 +326,7 @@
     <Compile Include="HediffGivers\HediffGiver_Heatstress.cs" />
     <Compile Include="HediffGivers\HediffGiver_HypothermicHibernation.cs" />
     <Compile Include="HediffGivers\HediffGiver_HypothermicSlowdown.cs" />
+    <Compile Include="Hediffs\Hediff_PollutionNeed.cs" />
     <Compile Include="Needs\Need_Pollution.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StaticCollections\StaticCollectionsClass.cs" />
