--- a/1.5/Source/VanillaRacesExpanded-Insector/VanillaRacesExpanded-Insector/VanillaRacesExpanded-Insector.csproj
+++ b/1.5/Source/VanillaRacesExpanded-Insector/VanillaRacesExpanded-Insector/VanillaRacesExpanded-Insector.csproj
@@ -312,6 +312,7 @@
     <Compile Include="Harmony\AttackTargetFinder_BestAttackTarget_Validator_Patch.cs" />
     <Compile Include="Harmony\Blueprint_TryReplaceWithSolidThing.cs" />
     <Compile Include="Harmony\FoodUtility_ThoughtsFromIngesting.cs" />
+    <Compile Include="Harmony\FoodUtility_TryGetFoodPoisoningChanceOverrideFromTraits.cs" />
     <Compile Include="Harmony\GeneUIUtility_DrawSection_Patch.cs" />
     <Compile Include="Harmony\GeneUtility_GenesInOrder_Patch.cs" />
     <Compile Include="Harmony\HarmonyInstance.cs" />
