--- a/1.6/Source/VanillaRacesExpanded-Insector/VanillaRacesExpanded-Insector/VanillaRacesExpanded-Insector.csproj
+++ b/1.6/Source/VanillaRacesExpanded-Insector/VanillaRacesExpanded-Insector/VanillaRacesExpanded-Insector.csproj
@@ -300,8 +300,8 @@
     <Compile Include="Alerts\Alert_ChestburstImplantationNeeded.cs" />
     <Compile Include="Comps\CompIngestPherocore.cs" />
     <Compile Include="Filths\Filth_ToxEmitting.cs" />
-    <Compile Include="GameComponents\GameComponent_UnlockedGenes.cs" />
-    <Compile Include="GameComponents\GameComponent_SwarmSynapse.cs" />
+    <Compile Include="WorldComponents\WorldComponent_UnlockedGenes.cs" />
+    <Compile Include="WorldComponents\WorldComponent_SwarmSynapse.cs" />
     <Compile Include="Genelines\GenelineGeneDef.cs" />
     <Compile Include="DefOfs\InternalDefOf.cs" />
     <Compile Include="Genelines\GameComponent_Genelines.cs" />
